cluster/prod/ocf/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
spec:
  ingressClassName: contour
  rules:
  - host: grafana.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.ocf.berkeley.edu
    secretName: grafana-tls
